--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <nav class="flex">
           <div class="link-wrap">
             <div class="active page-link" dest="home">Home</div>
-            <div class="active page-link" dest="about">About</div>
+            <div class="page-link" dest="about">About</div>
             <div class="page-link" dest="sounds">Sounds</div>
             <div class="page-link" dest="writings">Writings</div>
             <div class="page-link" dest="contacts">Contact</div>
